@@ -12,7 +12,9 @@ INCLUDES=	-DDEFAULT_CONFIG_FILE=\"$(DEFAULT_CONFIG_FILE)\" \
 		$(LOCAL_DEFINES)
 
 HTLIBS=		$(top_builddir)/htnet/libhtnet.la \
-		$(top_builddir)/htword/libhtword.la \
 		$(top_builddir)/htcommon/libcommon.la \
+		$(top_builddir)/htword/libhtword.la \
 		$(top_builddir)/htlib/libht.la \
+		$(top_builddir)/htcommon/libcommon.la \
+		$(top_builddir)/htword/libhtword.la \
 		$(top_builddir)/db/dist/libdb.a
